Fix deadlock in _shardsvrCompactStructuredEncryptionDataCommand

XMLWordPrintableJSON

    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0
    • Security 2024-07-22
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The order of locking the ECOC namespace and the temporary ECOC namespace in _shardsvrCompactStructuredEncryptionDataCommand::Invocation::makeRequest() should be swapped so that the temporary ECOC namespace IX lock is acquired before the ECOC namespace IX lock.

      This is to prevent a deadlock with another thread that is doing the actual renaming of the ECOC to the ECOC temporary namespace, which first acquires an X lock on the target namespace (ECOC temporary) before the source namespace (ECOC).

            Assignee:
            Erwin Pe
            Reporter:
            Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: