SERVER-92254 Fix deadlock in _shardsvrCompactStructuredEncryptionDataCommand (#24545)

GitOrigin-RevId: 77c7978ce360f4405b8616d33ef79b8187cc86ca